// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderList Operations #fetchOriginOperation should dispatch correctly when no pending 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": Array [
      Object {
        "destination": "1416 4th St, Santa Monica, CA 90401",
        "dispatchTime": 3,
        "id": "5sSNvC",
        "name": "Cottage Cheese",
      },
      Object {
        "destination": "1630 Ocean Park Blvd, Santa Monica, CA 90405",
        "dispatchTime": 13,
        "id": "4WVKZu",
        "name": "Cobb Salad",
      },
      Object {
        "destination": "2208 Sawtelle Blvd, Los Angeles, CA 90064",
        "dispatchTime": 16,
        "id": "tG7Mtb",
        "name": "Beef Stew",
      },
      Object {
        "destination": "400 World Way, Los Angeles, CA 90045",
        "dispatchTime": 24,
        "id": "ZEUn6r",
        "name": "Chunky Monkey",
      },
      Object {
        "destination": "10117 Washington Blvd, Culver City, CA 90232",
        "dispatchTime": 24,
        "id": "z57hNM",
        "name": "Beef Hash",
      },
      Object {
        "destination": "11777 San Vicente Blvd., Los Angeles, CA 90049",
        "dispatchTime": 26,
        "id": "3hWiEm",
        "name": "MeatLoaf",
      },
      Object {
        "destination": "4720 Admiralty Way, Marina Del Rey, CA 90292",
        "dispatchTime": 35,
        "id": "uoierx",
        "name": "Acai Bowl",
      },
      Object {
        "destination": "1323 Montana Ave, Santa Monica, CA 90403",
        "dispatchTime": 38,
        "id": "RoYGTg",
        "name": "Cookie Dough",
      },
      Object {
        "destination": "267 N Canon Dr, Beverly Hills, CA 90210",
        "dispatchTime": 39,
        "id": "UWkU5v",
        "name": "Mint Chocolate Ice Cream",
      },
      Object {
        "destination": "3306 Lincoln Blvd, Santa Monica, CA 90405",
        "dispatchTime": 40,
        "id": "2ndwz7",
        "name": "Vegan Pizza",
      },
      Object {
        "destination": "2911 Main St, Santa Monica, CA 90405",
        "dispatchTime": 41,
        "id": "VrXRDR",
        "name": "Arugula",
      },
      Object {
        "destination": "193 Culver Blvd, Playa Del Rey, CA 90293",
        "dispatchTime": 47,
        "id": "7Ur6qT",
        "name": "Chicken",
      },
      Object {
        "destination": "2055 Sawtelle Blvd, Los Angeles, CA 90025",
        "dispatchTime": 49,
        "id": "WFG4B3",
        "name": "Snow Cone",
      },
      Object {
        "destination": "1321 3rd St Promenade, Santa Monica, CA 90401",
        "dispatchTime": 54,
        "id": "tr5K86",
        "name": "Fudge Ice Cream Cake",
      },
      Object {
        "destination": "1303 Westwood Blvd, Los Angeles, CA 90024",
        "dispatchTime": 63,
        "id": "5kyaoG",
        "name": "Cheese",
      },
      Object {
        "destination": "13455 Maxella Ave, Ste 250, Marina Del Rey, CA 90292",
        "dispatchTime": 66,
        "id": "n5byZt",
        "name": "Fresh Fruit",
      },
      Object {
        "destination": "2323 Wilshire Blvd, Santa Monica, CA 90403",
        "dispatchTime": 73,
        "id": "aS4EFD",
        "name": "Chocolate Gelato",
      },
      Object {
        "destination": "1522 Abbott Kinney Blvd, Los Angeles, CA 90291",
        "dispatchTime": 78,
        "id": "2YVKCU",
        "name": "Spinach Omelet",
      },
      Object {
        "destination": "1716 S Sepulveda Blvd, Los Angeles, CA 90025",
        "dispatchTime": 93,
        "id": "7FNaQi",
        "name": "Pork Chop",
      },
      Object {
        "destination": "2906 Main St, Santa Monica, CA 90405",
        "dispatchTime": 94,
        "id": "woqBZv",
        "name": "Pad See Ew",
      },
      Object {
        "destination": "13455 Maxella Ave, Marina Del Rey, CA 90292",
        "dispatchTime": 98,
        "id": "EUtSqE",
        "name": "McFlury",
      },
      Object {
        "destination": "220 Rose Ave, Venice, CA 90291",
        "dispatchTime": 105,
        "id": "oP6QHd",
        "name": "Yogurt",
      },
      Object {
        "destination": "101 Santa Monica Blvd, Santa Monica, CA 90401",
        "dispatchTime": 109,
        "id": "8yJnGe",
        "name": "Cranberry Salad",
      },
      Object {
        "destination": "210 Wilshire Blvd, Santa Monica, Santa Monica, CA 90401",
        "dispatchTime": 109,
        "id": "sKar6C",
        "name": "Pickles",
      },
      Object {
        "destination": "9409 Venice Blvd, Culver City, CA 90232",
        "dispatchTime": 110,
        "id": "EJyQaE",
        "name": "Kale Salad",
      },
      Object {
        "destination": "2310 Pico Blvd, Santa Monica, CA 90405",
        "dispatchTime": 112,
        "id": "PQnWkG",
        "name": "Milk",
      },
      Object {
        "destination": "3918 Van Buren Pl, Culver City, CA 90232",
        "dispatchTime": 112,
        "id": "7VD4xy",
        "name": "Orange Chicken",
      },
      Object {
        "destination": "8115 W Manchester Ave, Playa Del Rey, CA 90293",
        "dispatchTime": 119,
        "id": "Fv8AdV",
        "name": "Coke",
      },
      Object {
        "destination": "185 Culver Blvd, Playa Del Rey, CA 90293",
        "dispatchTime": 119,
        "id": "9H4whD",
        "name": "Banana Split",
      },
      Object {
        "destination": "10113 Washington Blvd, Culver City, CA 90232",
        "dispatchTime": 120,
        "id": "AinKVi",
        "name": "Pastrami Sandwich",
      },
    ],
    "type": "@@OrderList/UPDATE_PENDING_ORDERS",
  },
  Object {
    "meta": undefined,
    "payload": true,
    "type": "@@OrderList/SIMULATING_ORDERS_STARTED",
  },
]
`;

exports[`OrderList Operations #fetchOriginOperation should dispatch correctly when pending, delivering exist 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": true,
    "type": "@@OrderList/SIMULATING_ORDERS_STARTED",
  },
  Object {
    "meta": undefined,
    "payload": Array [
      Object {
        "destination": "185 Culver Blvd, Playa Del Rey, CA 90293",
        "dispatchTime": 118,
        "id": "9H4whD",
        "name": "Banana Split",
      },
      Object {
        "destination": "13455 Maxella Ave, Marina Del Rey, CA 90292",
        "dispatchTime": 97,
        "id": "EUtSqE",
        "name": "McFlury",
      },
      Object {
        "destination": "4720 Admiralty Way, Marina Del Rey, CA 90292",
        "dispatchTime": 34,
        "id": "uoierx",
        "name": "Acai Bowl",
      },
      Object {
        "destination": "220 Rose Ave, Venice, CA 90291",
        "dispatchTime": 104,
        "id": "oP6QHd",
        "name": "Yogurt",
      },
      Object {
        "destination": "2323 Wilshire Blvd, Santa Monica, CA 90403",
        "dispatchTime": 72,
        "id": "aS4EFD",
        "name": "Chocolate Gelato",
      },
      Object {
        "destination": "1630 Ocean Park Blvd, Santa Monica, CA 90405",
        "dispatchTime": 12,
        "id": "4WVKZu",
        "name": "Cobb Salad",
      },
      Object {
        "destination": "1416 4th St, Santa Monica, CA 90401",
        "dispatchTime": 2,
        "id": "5sSNvC",
        "name": "Cottage Cheese",
      },
      Object {
        "destination": "8115 W Manchester Ave, Playa Del Rey, CA 90293",
        "dispatchTime": 118,
        "id": "Fv8AdV",
        "name": "Coke",
      },
      Object {
        "destination": "2055 Sawtelle Blvd, Los Angeles, CA 90025",
        "dispatchTime": 48,
        "id": "WFG4B3",
        "name": "Snow Cone",
      },
      Object {
        "destination": "2906 Main St, Santa Monica, CA 90405",
        "dispatchTime": 93,
        "id": "woqBZv",
        "name": "Pad See Ew",
      },
    ],
    "type": "@@OrderList/UPDATE_PENDING_ORDERS",
  },
]
`;

exports[`OrderList Operations #fetchOriginOperation should dispatch correctly when there is new delivering 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": true,
    "type": "@@OrderList/SIMULATING_ORDERS_STARTED",
  },
  Object {
    "meta": undefined,
    "payload": Array [
      Object {
        "destination": "13455 Maxella Ave, Marina Del Rey, CA 90292",
        "dispatchTime": 97,
        "id": "EUtSqE",
        "name": "McFlury",
      },
      Object {
        "destination": "4720 Admiralty Way, Marina Del Rey, CA 90292",
        "dispatchTime": 34,
        "id": "uoierx",
        "name": "Acai Bowl",
      },
      Object {
        "destination": "220 Rose Ave, Venice, CA 90291",
        "dispatchTime": 104,
        "id": "oP6QHd",
        "name": "Yogurt",
      },
      Object {
        "destination": "2323 Wilshire Blvd, Santa Monica, CA 90403",
        "dispatchTime": 72,
        "id": "aS4EFD",
        "name": "Chocolate Gelato",
      },
      Object {
        "destination": "1630 Ocean Park Blvd, Santa Monica, CA 90405",
        "dispatchTime": 12,
        "id": "4WVKZu",
        "name": "Cobb Salad",
      },
      Object {
        "destination": "1416 4th St, Santa Monica, CA 90401",
        "dispatchTime": 2,
        "id": "5sSNvC",
        "name": "Cottage Cheese",
      },
      Object {
        "destination": "8115 W Manchester Ave, Playa Del Rey, CA 90293",
        "dispatchTime": 118,
        "id": "Fv8AdV",
        "name": "Coke",
      },
      Object {
        "destination": "2055 Sawtelle Blvd, Los Angeles, CA 90025",
        "dispatchTime": 48,
        "id": "WFG4B3",
        "name": "Snow Cone",
      },
      Object {
        "destination": "2906 Main St, Santa Monica, CA 90405",
        "dispatchTime": 93,
        "id": "woqBZv",
        "name": "Pad See Ew",
      },
    ],
    "type": "@@OrderList/UPDATE_PENDING_ORDERS",
  },
  Object {
    "type": "mock",
  },
]
`;
